Stop overflowing text from hitting the border
Bug: 62194

--- a/resources/ext.popups.core.less
+++ b/resources/ext.popups.core.less
@@ -35,7 +35,8 @@
 		}
 
 		> div {
-			padding: 16px;
+			padding: 0;
+			margin: 16px;
 			padding-bottom: 48px;
 
 			> div.mwe-popups-redirect {
@@ -154,7 +155,7 @@
 		}
 
 		.mwe-popups-extract {
-			margin-top: 190px;
+			margin-top: 206px;
 		}
 
 		> a > svg {
